--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
       <p>《熊出没》是一部深受孩子们喜爱的国产动画系列，讲述了熊大、熊二两兄弟与伐木工光头强在森林里发生的各种有趣故事。</p>
 
       <div class="media-container">
-        <img src="https://github.com/ifindiscretion/dudu.github.io/blob/main/bear-brothers.jpg" alt="熊大熊二和光头强" />
+        <img src="https://raw.githubusercontent.com/ifindiscretion/dudu.github.io/main/bear-brothers.jpg" alt="熊大熊二和光头强" />
         <p>熊大熊二与光头强的日常</p>
       </div>
 
@@ -127,7 +127,7 @@
       <h2>角色介绍</h2>
 
       <div class="character-card">
-        <img class="https://github.com/ifindiscretion/dudu.github.io/blob/main/xiongda.jpg" alt="熊大" />
+        <img class="https://raw.githubusercontent.com/ifindiscretion/dudu.github.io/main/xiongda.jpg" alt="熊大" />
         <div>
           <h3>熊大</h3>
           <p>熊兄弟中的哥哥，聪明机智，有领导才能，经常想出各种办法阻止光头强砍树。</p>
@@ -135,7 +135,7 @@
       </div>
 
       <div class="character-card">
-        <img class="https://github.com/ifindiscretion/dudu.github.io/blob/main/xionger.jpg" alt="熊二" />
+        <img class="https://raw.githubusercontent.com/ifindiscretion/dudu.github.io/main/xionger.jpg" alt="熊二" />
         <div>
           <h3>熊二</h3>
           <p>熊兄弟中的弟弟，憨厚可爱，贪吃贪玩，虽然有时会帮倒忙，但关键时刻总能发挥作用。</p>
@@ -143,7 +143,7 @@
       </div>
 
       <div class="character-card">
-        <img class="https://github.com/ifindiscretion/dudu.github.io/blob/main/guangtouqiang.jpg" alt="光头强" />
+        <img class="https://raw.githubusercontent.com/ifindiscretion/dudu.github.io/main/guangtouqiang.jpg" alt="光头强" />
         <div>
           <h3>光头强</h3>
           <p>伐木工人，为了完成李老板交代的伐木任务想尽各种办法，但总是被熊兄弟阻止。</p>
@@ -161,7 +161,7 @@
       </ul>
 
       <div class="video-wrapper">
-        <iframe src="https://github.com/ifindiscretion/dudu.github.io/blob/main/dudu.mp4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe src="https://raw.githubusercontent.com/ifindiscretion/dudu.github.io/main/dudu.mp4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
       <p>《熊出没》电影预告片</p>
     </section>
@@ -169,11 +169,11 @@
     <section id="gallery">
       <h2>图片欣赏</h2>
       <div class="media-container">
-        <img src="https://github.com/ifindiscretion/dudu.github.io/blob/main/bear-scene1.jpg" alt="森林场景" />
+        <img src="https://raw.githubusercontent.com/ifindiscretion/dudu.github.io/main/bear-scene1.jpg" alt="森林场景" />
         <p>美丽的原始森林</p>
       </div>
       <div class="media-container">
-        <img src="https://github.com/ifindiscretion/dudu.github.io/blob/main/bear-scene2.jpg" alt="冬季场景" />
+        <img src="https://raw.githubusercontent.com/ifindiscretion/dudu.github.io/main/bear-scene2.jpg" alt="冬季场景" />
         <p>冬季的熊岭</p>
       </div>
     </section>
