--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
       <h2>角色介绍</h2>
 
       <div class="character-card">
-        <img class="https://raw.githubusercontent.com/ifindiscretion/dudu.github.io/main/xiongda.jpg" alt="熊大" />
+        <img src="xiongda.jpg" />
         <div>
           <h3>熊大</h3>
           <p>熊兄弟中的哥哥，聪明机智，有领导才能，经常想出各种办法阻止光头强砍树。</p>
