--- a/index.html
+++ b/index.html
@@ -4,92 +4,170 @@
     <title>熊出没探险日记</title>
     <style type="text/css">
       <![CDATA[
+      :root {
+        --primary: #e67a00;
+        --secondary: #8b4513;
+        --accent: #ffd700;
+        --light: #fff8e1;
+        --dark: #5a3e1f;
+      }
       body {
         font-family: 'Microsoft YaHei', sans-serif;
-        line-height: 1.6;
-        max-width: 900px;
+        line-height: 1.8;
+        max-width: 1000px;
         margin: 0 auto;
         padding: 20px;
         background-color: #f9f4e6;
-        color: #5a3e1f;
+        color: var(--dark);
+        background-image: url('forest-pattern.png');
+        background-attachment: fixed;
+        background-size: 300px;
+        background-blend-mode: overlay;
       }
       header {
-        background-color: #e67a00;
+        background: linear-gradient(135deg, var(--primary), #d2691e);
         color: white;
-        padding: 20px;
-        border-radius: 10px;
+        padding: 30px;
+        border-radius: 15px;
         text-align: center;
-        margin-bottom: 20px;
+        margin-bottom: 30px;
+        box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+        border: 3px solid var(--accent);
+      }
+      h1 {
+        margin: 0;
+        font-size: 2.5em;
+        text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
       }
       nav {
-        background: #8b4513;
+        background: linear-gradient(to right, var(--secondary), #a0522d);
         padding: 15px;
         border-radius: 10px;
-        margin-bottom: 30px;
+        margin-bottom: 40px;
+        box-shadow: 0 4px 8px rgba(0,0,0,0.1);
       }
       nav ul {
         list-style: none;
         padding: 0;
         display: flex;
         justify-content: space-around;
+        margin: 0;
       }
       nav a {
         text-decoration: none;
-        color: #ffd700;
+        color: var(--accent);
         font-weight: bold;
-        font-size: 18px;
+        font-size: 1.1em;
+        padding: 8px 15px;
+        border-radius: 20px;
+        transition: all 0.3s ease;
       }
       nav a:hover {
         color: white;
+        background-color: rgba(255,255,255,0.2);
+        transform: translateY(-2px);
       }
       section {
-        margin: 30px 0;
-        padding: 25px;
-        background-color: #fff8e1;
-        border-radius: 10px;
-        box-shadow: 0 3px 5px rgba(0,0,0,0.1);
+        margin: 40px 0;
+        padding: 30px;
+        background-color: var(--light);
+        border-radius: 15px;
+        box-shadow: 0 3px 10px rgba(0,0,0,0.08);
+        border-left: 5px solid var(--primary);
       }
       h2 {
-        color: #e67a00;
-        border-bottom: 2px solid #8b4513;
+        color: var(--primary);
+        border-bottom: 2px dashed var(--secondary);
         padding-bottom: 10px;
+        font-size: 1.8em;
+        margin-top: 0;
       }
       .media-container {
-        margin: 25px 0;
+        margin: 30px 0;
         text-align: center;
+        background: white;
+        padding: 15px;
+        border-radius: 10px;
+        box-shadow: 0 2px 5px rgba(0,0,0,0.05);
       }
       img {
         max-width: 100%;
         height: auto;
         border-radius: 10px;
-        border: 5px solid #8b4513;
+        border: 5px solid var(--secondary);
+        transition: transform 0.3s ease;
+        box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+      }
+      img:hover {
+        transform: scale(1.02);
       }
       .video-wrapper {
         position: relative;
         padding-bottom: 56.25%;
         height: 0;
         overflow: hidden;
-        margin: 25px 0;
+        margin: 30px 0;
+        border-radius: 15px;
+        box-shadow: 0 5px 20px rgba(0,0,0,0.15);
       }
-      .video-wrapper iframe {
+      .video-wrapper video {
         position: absolute;
         top: 0;
         left: 0;
         width: 100%;
         height: 100%;
-        border-radius: 10px;
+        border-radius: 15px;
       }
       .character-card {
         display: flex;
         align-items: center;
-        margin: 20px 0;
-        padding: 15px;
-        background-color: #f0e6cc;
+        margin: 25px 0;
+        padding: 20px;
+        background: linear-gradient(to right, #f8f1e0, #f0e6cc);
+        border-radius: 15px;
+        box-shadow: 0 3px 8px rgba(0,0,0,0.05);
+        transition: transform 0.3s ease;
+      }
+      .character-card:hover {
+        transform: translateY(-5px);
+        box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+      }
+      .character-card img {
+        width: 180px;
+        height: 180px;
+        object-fit: cover;
+        margin-right: 25px;
+        border: 5px solid var(--primary);
+      }
+      .character-card h3 {
+        color: var(--secondary);
+        margin-top: 0;
+        font-size: 1.5em;
+      }
+      footer {
+        text-align: center;
+        margin-top: 50px;
+        padding: 20px;
+        background-color: var(--secondary);
+        color: white;
         border-radius: 10px;
       }
-      .character-img {
-        width: 150px;
-        margin-right: 20px;
+      @media (max-width: 768px) {
+        nav ul {
+          flex-direction: column;
+          align-items: center;
+        }
+        nav a {
+          margin: 5px 0;
+        }
+        .character-card {
+          flex-direction: column;
+          text-align: center;
+        }
+        .character-card img {
+          margin-right: 0;
+          margin-bottom: 15px;
+        }
       }
       ]]>
     </style>
@@ -112,85 +190,86 @@
     </nav>
 
     <section id="intro">
-      <h2>故事简介</h2>
+      <h2>🌲 故事简介</h2>
       <p>《熊出没》是一部深受孩子们喜爱的国产动画系列，讲述了熊大、熊二两兄弟与伐木工光头强在森林里发生的各种有趣故事。</p>
 
       <div class="media-container">
-        <img src="bear-brothers.jpg" />
+        <img src="bear-brothers.jpg" alt="熊大熊二和光头强" />
         <p>熊大熊二与光头强的日常</p>
       </div>
 
-      <p>故事发生在美丽的东北原始森林，这里生活着可爱的熊兄弟和他们的动物朋友们。光头强受雇于李老板来森林伐木，为了保护家园，熊兄弟与光头强展开了一系列斗智斗勇的搞笑故事。</p>
+      <p>故事发生在美丽的东北原始森林，这里生活着可爱的熊兄弟和他们的动物朋友们。光头强受雇于李老板来森林伐木，为了保护家园，熊兄弟与光头强展开了一系列斗智斗勇的搞笑故事，既有欢乐的追逐战，也有温馨的友谊时刻。</p>
     </section>
 
     <section id="characters">
-      <h2>角色介绍</h2>
+      <h2>🐻 角色介绍</h2>
 
       <div class="character-card">
-        <img src="xiongda.jpg" />
+        <img src="xiongda.jpg" alt="熊大" />
         <div>
           <h3>熊大</h3>
-          <p>熊兄弟中的哥哥，聪明机智，有领导才能，经常想出各种办法阻止光头强砍树。</p>
+          <p>熊兄弟中的哥哥，棕熊，聪明机智，有领导才能，经常想出各种办法阻止光头强砍树。虽然有时会嫌弃弟弟熊二贪吃贪玩，但在关键时刻总是最关心弟弟的好哥哥。</p>
         </div>
       </div>
 
       <div class="character-card">
-        <img src="xionger.jpg" />
+        <img src="xionger.jpg" alt="熊二" />
         <div>
           <h3>熊二</h3>
-          <p>熊兄弟中的弟弟，憨厚可爱，贪吃贪玩，虽然有时会帮倒忙，但关键时刻总能发挥作用。</p>
+          <p>熊兄弟中的弟弟，黑熊，憨厚可爱，贪吃贪玩，口头禅是"俺要吃蜂蜜"。虽然有时会帮倒忙，但心地善良，关键时刻总能发挥意想不到的作用。</p>
         </div>
       </div>
 
       <div class="character-card">
-        <img src="guangtouqiang.jpg" />
+        <img src="guangtouqiang.jpg" alt="光头强" />
         <div>
           <h3>光头强</h3>
-          <p>伐木工人，为了完成李老板交代的伐木任务想尽各种办法，但总是被熊兄弟阻止。</p>
+          <p>伐木工人，为了完成李老板交代的伐木任务想尽各种办法，但总是被熊兄弟阻止。虽然看似是"反派"，但其实也有善良和可爱的一面，经常和熊兄弟不打不相识。</p>
         </div>
       </div>
     </section>
 
     <section id="episodes">
-      <h2>精彩剧集</h2>
+      <h2>🎬 精彩剧集</h2>
       <p>以下是《熊出没》系列中最受欢迎的几集：</p>
       <ul>
-        <li>第一季第5集：森林保卫战</li>
-        <li>第二季第12集：光头强的发明</li>
-        <li>电影版：熊出没之雪岭熊风</li>
+        <li><strong>第一季第5集：森林保卫战</strong> - 熊兄弟第一次联手阻止光头强砍树</li>
+        <li><strong>第二季第12集：光头强的发明</strong> - 光头强制造伐木机器人，引发爆笑对决</li>
+        <li><strong>电影版：熊出没之夺宝熊兵</strong> - 熊强组合意外卷入宝物争夺战</li>
       </ul>
 
       <div class="video-wrapper">
-        <video controls>
+        <video controls poster="video-poster.jpg">
           <source src="dudu.mp4" type="video/mp4">
         </video>
       </div>
-      <p>《熊出没》电影预告片</p>
+      <p style="text-align: center; font-style: italic;">《熊出没》精彩片段预览</p>
     </section>
 
     <section id="gallery">
-      <h2>图片欣赏</h2>
+      <h2>📷 图片欣赏</h2>
       <div class="media-container">
-         <img src="bear-scene1.jpg" />
-        <p>美丽的原始森林</p>
+        <img src="bear-scene1.jpg" alt="森林场景" />
+        <p>美丽的原始森林 - 熊大熊二的家园</p>
       </div>
       <div class="media-container">
-        <img src="bear-scene2.jpg" />
-        <p>冬季的熊岭</p>
+        <img src="bear-scene2.jpg" alt="冬季场景" />
+        <p>冬季的熊岭 - 银装素裹的童话世界</p>
       </div>
     </section>
 
     <section id="contact">
-      <h2>联系我</h2>
-      <p>如果你也是《熊出没》的粉丝，欢迎通过以下方式联系我：</p>
+      <h2>📩 联系我</h2>
+      <p>如果你也是《熊出没》的粉丝，欢迎通过以下方式联系我交流心得：</p>
       <ul>
-        <li>邮箱：bearfan@example.com</li>
-        <li>GitHub：github.com/bearadventure</li>
+        <li>📧 邮箱：<a href="mailto:bearfan@example.com">bearfan@example.com</a></li>
+        <li>🐱 GitHub：<a href="https://github.com/bearadventure" target="_blank">github.com/bearadventure</a></li>
+        <li>🐻 熊出没官方微博：@熊出没动画</li>
       </ul>
     </section>
 
     <footer>
-      <p>© 2023 熊出没探险日记 - 所有权利保留</p>
+      <p>© 2023 熊出没探险日记 - 所有权利保留 | 本网站为粉丝创作，非官方</p>
     </footer>
   </body>
 </blog>
