--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         background-attachment: fixed;
         background-size: 300px;
         background-blend-mode: overlay;
+        text-align: center;
       }
       header {
         background: linear-gradient(135deg, var(--primary), #d2691e);
@@ -74,6 +75,7 @@
         border-radius: 15px;
         box-shadow: 0 3px 10px rgba(0,0,0,0.08);
         border-left: 5px solid var(--primary);
+        text-align: center;
       }
       h2 {
         color: var(--primary);
@@ -81,14 +83,16 @@
         padding-bottom: 10px;
         font-size: 1.8em;
         margin-top: 0;
+        text-align: center;
       }
       .media-container {
-        margin: 30px 0;
+        margin: 30px auto;
         text-align: center;
         background: white;
         padding: 15px;
         border-radius: 10px;
         box-shadow: 0 2px 5px rgba(0,0,0,0.05);
+        max-width: 800px;
       }
       img {
         max-width: 100%;
@@ -97,6 +101,9 @@
         border: 5px solid var(--secondary);
         transition: transform 0.3s ease;
         box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+        width: 600px;
+        height: 400px;
+        object-fit: cover;
       }
       img:hover {
         transform: scale(1.02);
@@ -106,9 +113,10 @@
         padding-bottom: 56.25%;
         height: 0;
         overflow: hidden;
-        margin: 30px 0;
+        margin: 30px auto;
         border-radius: 15px;
         box-shadow: 0 5px 20px rgba(0,0,0,0.15);
+        max-width: 800px;
       }
       .video-wrapper video {
         position: absolute;
@@ -121,12 +129,14 @@
       .character-card {
         display: flex;
         align-items: center;
-        margin: 25px 0;
+        margin: 25px auto;
         padding: 20px;
         background: linear-gradient(to right, #f8f1e0, #f0e6cc);
         border-radius: 15px;
         box-shadow: 0 3px 8px rgba(0,0,0,0.05);
         transition: transform 0.3s ease;
+        max-width: 800px;
+        justify-content: center;
       }
       .character-card:hover {
         transform: translateY(-5px);
@@ -143,6 +153,11 @@
         color: var(--secondary);
         margin-top: 0;
         font-size: 1.5em;
+        text-align: left;
+      }
+      .character-card div {
+        text-align: left;
+        max-width: 500px;
       }
       footer {
         text-align: center;
@@ -151,6 +166,22 @@
         background-color: var(--secondary);
         color: white;
         border-radius: 10px;
+      }
+      ul {
+        display: inline-block;
+        text-align: left;
+        margin: 0 auto;
+        padding: 0;
+        list-style-position: inside;
+      }
+      li {
+        margin-bottom: 10px;
+      }
+      p {
+        text-align: center;
+        max-width: 800px;
+        margin-left: auto;
+        margin-right: auto;
       }
       @media (max-width: 768px) {
         nav ul {
@@ -167,6 +198,13 @@
         .character-card img {
           margin-right: 0;
           margin-bottom: 15px;
+        }
+        .character-card div {
+          text-align: center;
+        }
+        img {
+          width: 100%;
+          height: auto;
         }
       }
       ]]>
