--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         max-width: 1000px;
         margin: 0 auto;
         padding: 20px;
-        background-color: #f9f4e6;
+        background-color: #f0e6cc; /* 更温暖的背景色 */
         color: var(--dark);
         background-image: url('forest-pattern.png');
         background-attachment: fixed;
@@ -37,8 +37,14 @@
       }
       h1 {
         margin: 0;
-        font-size: 2.5em;
+        font-size: 2.5em; /* 二号字体大小 */
         text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
+      }
+      h2 {
+        font-size: 1.8em; /* 二号字体大小 */
+      }
+      p, li {
+        font-size: 1.1em; /* 小三字体大小 */
       }
       nav {
         background: linear-gradient(to right, var(--secondary), #a0522d);
@@ -81,9 +87,7 @@
         color: var(--primary);
         border-bottom: 2px dashed var(--secondary);
         padding-bottom: 10px;
-        font-size: 1.8em;
         margin-top: 0;
-        text-align: center;
       }
       .media-container {
         margin: 30px auto;
@@ -300,7 +304,7 @@
       <h2>📩 联系我</h2>
       <p>如果你也是《熊出没》的粉丝，欢迎通过以下方式联系我交流心得：</p>
       <ul>
-        <li>📧 邮箱：<a href="mailto:bearfan@example.com">bearfan@example.com</a></li>
+        <li>📧 邮箱：<a href="mailto:bearfan@example.com">bearfan@qq.com</a></li>
         <li>🐱 GitHub：<a href="https://github.com/bearadventure  " target="_blank">github.com/bearadventure</a></li>
         <li>🐻 熊出没官方微博：@熊出没动画</li>
       </ul>
