--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
     <section id="gallery">
       <h2>📷 图片欣赏</h2>
       <div class="media-container">
-        <img src="bear-scene1.jpg" alt="森林场景" />
+        <img src="senlin.jpg" alt="森林场景" />
         <p>美丽的原始森林 - 熊大熊二的家园</p>
       </div>
       <div class="media-container">
